:cat2: add fb meta img

--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -9,8 +9,9 @@ html
     meta(property='og:title', content='學分計算機')
     meta(property='og:url',  content='https://calc.hsingpicking.com.tw/')
     meta(property='og:description', content='為中興大學大學部學生設計的學分計算機，可以簡單的看自己目前已修習學分。')
-    meta(property='og:image', content='/img/calc-md.jpg')
-    meta(property='og:image', content='/img/calc-lg.jpg')
+    meta(property='og:image', content='/img/calc-sm.png')
+    meta(property='og:image', content='/img/calc-md.png')
+    meta(property='og:image', content='/img/calc-lg.png')
     link(rel='shortcut icon' type='image/x-icon' href='./img/icon.png')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css')
