--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -10,9 +10,9 @@ html
     meta(property='og:url',  content='https://calc.hsingpicking.com.tw/')
     meta(property='og:description', content='為中興大學大學部學生設計的學分計算機，可以簡單的看自己目前已修習學分。')
     meta(property='fb:app_id', content='335979700170666')
-    meta(property='og:image', content='http://i.imgur.com/OWZWQDw.png')
-    meta(property='og:image', content='http://i.imgur.com/wlpraR0.png')
-    meta(property='og:image', content='http://i.imgur.com/FWLJSFr.png')
+    meta(property='og:image', content='/img/calc-sm.png.png')
+    meta(property='og:image', content='/img/calc-md.png.png')
+    meta(property='og:image', content='/img/calc-lg.png.png')
     link(rel='shortcut icon' type='image/x-icon' href='./img/icon.png')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css')
