:cat2: change defult font-family & add post error try catch

--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -9,6 +9,7 @@ html
     meta(property='og:title', content='學分計算機')
     meta(property='og:url',  content='https://calc.hsingpicking.com.tw/')
     meta(property='og:description', content='為中興大學大學部學生設計的學分計算機，可以簡單的看自己目前已修習學分。')
+    meta(property='og:type', content='website')
     meta(property='fb:app_id', content='335979700170666')
     meta(property='og:image', content='https://calc.hsingpicking.com.tw/img/calc-sm.png')
     meta(property='og:image', content='https://calc.hsingpicking.com.tw/img/calc-md.png')
