--- a/src/styles/less/main.less
+++ b/src/styles/less/main.less
@@ -4,7 +4,8 @@
 @notpass: #FF4545;
 
 body, #app {
-  width: 100vw;
+  font-family: 'Roboto', '黑體-繁', 'Microsoft JhengHei', sans-serif;
+  width: 100%;
   position: relative;
   background-color: #f5f6f7;
 }
