:cat2: add ga.js

--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -26,6 +26,7 @@ html
     script(src='cordova.js')
     script(src='./js/libs/jquery-2.2.4.min.js')
     script(src='./js/libs/lodash.min.js')
+    script(src='./js/libs/ga.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.2.6/vue.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js')
     script(src='https://rawgit.com/pguso/jquery-plugin-circliful/1.0.2/js/jquery.circliful.js')
