:cat2: rest api 2.0

--- a/src/pug/creditList.pug
+++ b/src/pug/creditList.pug
@@ -12,7 +12,10 @@
       li(v-for='(courseData, jk) in iv["total"]', v-bind:class='{ notpass: courseData["成績"] < 60 }', v-on:click='getCourseInfo(courseData)')
         .list-text
           p.title {{ courseData['課程名稱'] }}
-          p.subject {{ courseData['所屬項目'] }}
+          p.subject
+            span(v-if='courseData["課程分類"] !== ""') {{ courseData["課程分類"] }}
+            span(v-if='courseData["課程分類"] === "" && courseData["課程別"] !== "必"') 必修
+            span(v-if='courseData["課程分類"] === "" && courseData["課程別"] !== "選"') 選修
         .list-credit
           p.credit {{ courseData['畢業學分'] }}
         .list-icon
