--- a/src/pug/modal.pug
+++ b/src/pug/modal.pug
@@ -1,15 +1,3 @@
-#editNeedCrredit.modal.fade(tabindex='-1')
-  .modal-dialog
-    .modal-content
-      .modal-header
-        button.close(type='button', data-dismiss='modal', aria-label='Close')
-          span(aria-hidden='true') &times;
-        h4.modal-title 修改畢業學分
-      .modal-body
-        
-      .modal-footer
-        button.btn.btn-primary(type='button') Save
-
 #totCourseList.modal.fade(tabindex='-1')
   .modal-dialog.modal-lg
     .modal-content
@@ -21,17 +9,20 @@
         div(v-for='(iv, years) in creditSummary')
           .row.yaer-title
             .col-xs-7
-              h2.year(v-bind:id='years') {{ years }} 學期
+              h2.year(:id='years') {{ years }} 學期
             .col-xs-5
               h2.creditRatio
                 | {{ iv['getCredits'] }}
                 | /
                 | {{ iv['credits'] }}
           ul
-            li(v-for='(courseData, jk) in iv["total"]', v-bind:class='{ notpass: courseData["成績"] < 60 }')
+            li(v-for='(courseData, jk) in iv["total"]', :class='{ notpass: courseData["成績"] < 60 }')
               .list-text
                 p.title {{ courseData['課程名稱'] }}
-                p.subject {{ courseData['所屬項目'] }}
+                p.subject
+                  span(v-if='courseData["課程分類"] !== ""') {{ courseData["課程分類"] }}
+                  span(v-if='courseData["課程分類"] === "" && courseData["課程別"] !== "必"') 必修
+                  span(v-if='courseData["課程分類"] === "" && courseData["課程別"] !== "選"') 選修
               .list-credit
                 p.credit {{ courseData['畢業學分'] }}
               .list-icon(@click='getCourseInfo(courseData)')
@@ -50,10 +41,13 @@
           | /
           | {{ subjectList.needCredit }}
         ul
-          li(v-for='(courseData, key) in subjectList.course', v-bind:class='{ notpass: courseData["成績"] < 60 }')
+          li(v-for='(courseData, key) in subjectList.course', :class='{ notpass: courseData["成績"] < 60 }')
             .list-text
               p.title {{ courseData['課程名稱'] }}
-              p.subject {{ courseData['所屬項目'] }}
+              p.subject
+                span(v-if='courseData["課程分類"] !== ""') {{ courseData["課程分類"] }}
+                span(v-if='courseData["課程分類"] === "" && courseData["課程別"] !== "必"') 必修
+                span(v-if='courseData["課程分類"] === "" && courseData["課程別"] !== "選"') 選修
             .list-credit
               p.credit {{ courseData['畢業學分'] }}
             .list-icon(@click='getCourseInfo(courseData)')
