--- a/src/pug/subjectList.pug
+++ b/src/pug/subjectList.pug
@@ -11,8 +11,8 @@
           p.title {{ courseData['課程名稱'] }}
           p.subject
             span(v-if='courseData["課程分類"] !== ""') {{ courseData["課程分類"] }}
-            span(v-if='courseData["課程分類"] === "" && courseData["課程別"] !== "必"') 必修
-            span(v-if='courseData["課程分類"] === "" && courseData["課程別"] !== "選"') 選修
+            span(v-if='courseData["課程分類"] === "" && courseData["課程別"] === "必"') 必修
+            span(v-if='courseData["課程分類"] === "" && courseData["課程別"] === "選"') 選修
       .list-credit
         p.credit {{ courseData['畢業學分'] }}
       .list-icon(@click='getCourseInfo(courseData)')
