--- a/src/pug/loading.pug
+++ b/src/pug/loading.pug
@@ -1,4 +1,4 @@
-#loading(v-if='activePage == -1')
+#loading(v-if='activePage === -1')
   .loading
     .square.square-a.state1a
     .square.square-a.state2a
