--- a/src/pug/profile.pug
+++ b/src/pug/profile.pug
@@ -1,4 +1,4 @@
-#profile.mainPage.container(v-if='activePage == 4')
+#profile.mainPage.container(v-if='activePage === 3')
   ul
     li
       .list-text 姓名
