--- a/src/pug/subjectList.pug
+++ b/src/pug/subjectList.pug
@@ -1,4 +1,4 @@
-#subjectList.mainPage.container(v-if='activePage == 5')
+#subjectList.mainPage.container(v-if='activePage === 5')
   .subjectInfo
     h3.subjectTitle {{ subjectTitle }}
     h3.subjectList
