--- a/src/pug/login.pug
+++ b/src/pug/login.pug
@@ -1,4 +1,4 @@
-#login(v-if='activePage == 0')
+#login(v-if='activePage === 0')
   form(@submit='login', action='#' method='POST')
     input(placeholder='學號', type='text', name='studentID', required='required', v-model='studentId')
     input(placeholder='密碼', type='password', name='studentPW', required='required', v-model='studentPw')
