:cat2: update meta

--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -7,13 +7,13 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='author', content='Sakamoto')
     meta(property='og:title', content='學分計算機')
-    meta(property='og:url',  content='https://calc.hsingpicking.com.tw/')
+    meta(property='og:url',  content='https://calc.hsingpicking.tk/')
     meta(property='og:description', content='為中興大學大學部學生設計的學分計算機，可以簡單的看自己目前已修習學分。')
     meta(property='og:type', content='website')
     meta(property='fb:app_id', content='335979700170666')
-    meta(property='og:image', content='https://calc.hsingpicking.com.tw/img/calc-sm.png')
-    meta(property='og:image', content='https://calc.hsingpicking.com.tw/img/calc-md.png')
-    meta(property='og:image', content='https://calc.hsingpicking.com.tw/img/calc-lg.png')
+    meta(property='og:image', content='https://calc.hsingpicking.tk/img/calc-sm.png')
+    meta(property='og:image', content='https://calc.hsingpicking.tk/img/calc-md.png')
+    meta(property='og:image', content='https://calc.hsingpicking.tk/img/calc-lg.png')
     link(rel='shortcut icon' type='image/x-icon' href='./img/icon.png')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css')
